@@ -10,6 +10,7 @@ import com.example.solex_backend.dto.response.CategoryResponse;
 import com.example.solex_backend.dto.response.ProductResponse;
 import com.example.solex_backend.dto.response.ProductVariantResponse;
 import com.example.solex_backend.dto.response.RestaurantResponse;
+import com.example.solex_backend.dto.response.SliceResponse;
 import com.example.solex_backend.exception.BusinessException;
 import com.example.solex_backend.exception.ResourceNotFoundException;
 import com.example.solex_backend.repository.CategoryRepository;
@@ -18,6 +19,7 @@ import com.example.solex_backend.repository.ProductQueryRepository;
 import com.example.solex_backend.repository.ProductVariantRepository;
 import com.example.solex_backend.repository.RestaurantRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -35,13 +37,15 @@ public class RestaurantService {
         private final ProductImageRepository productImageRepository;
         private final ProductVariantRepository productVariantRepository;
 
-        public List<RestaurantResponse> getAllRestaurants(String name) {
-                List<Restaurant> restaurants = (name != null && !name.isBlank())
-                                ? restaurantRepository.searchOpenByName(name)
-                                : restaurantRepository.findByIsOpen(true);
-                return restaurants.stream()
-                                .map(this::toRestaurantResponse)
-                                .collect(Collectors.toList());
+        public SliceResponse<RestaurantResponse> getAllRestaurants(String name, Long cursor, int size) {
+                List<Restaurant> result = (name != null && !name.isBlank())
+                                ? restaurantRepository.searchOpenByNameAfterCursor(name, cursor,
+                                                PageRequest.of(0, size + 1))
+                                : restaurantRepository.findOpenAfterCursor(cursor, PageRequest.of(0, size + 1));
+                boolean hasNext = result.size() > size;
+                List<Restaurant> page = hasNext ? result.subList(0, size) : result;
+                Long nextCursor = hasNext ? page.get(page.size() - 1).getId() : null;
+                return new SliceResponse<>(page.stream().map(this::toRestaurantResponse).toList(), nextCursor);
         }
 
         public RestaurantResponse getRestaurantById(Long id) {
@@ -51,22 +55,15 @@ public class RestaurantService {
         }
 
         public List<CategoryResponse> getCategoriesForRestaurant(Long id) {
-                Restaurant restaurant = restaurantRepository.findById(id)
-                                .orElseThrow(() -> new ResourceNotFoundException("Restaurant not found: " + id));
-                return categoryRepository.findByRestaurantOrderByName(restaurant).stream()
+                return categoryRepository.findByRestaurant_IdOrderByName(id).stream()
                                 .map(c -> new CategoryResponse(c.getId(), c.getName(), c.getImageUrl()))
-                                .collect(Collectors.toList());
+                                .toList();
         }
 
         public CategoryResponse createCategory(User operator, CreateCategoryRequest request) {
                 Restaurant restaurant = restaurantRepository.findByOperator(operator)
                                 .orElseThrow(() -> new ResourceNotFoundException(
                                                 "Restaurant not found for this operator"));
-
-                if (categoryRepository.existsByRestaurantAndName(restaurant, request.name())) {
-                        throw new BusinessException(
-                                        "Category '" + request.name() + "' already exists in your restaurant");
-                }
 
                 Category category = Category.builder()
                                 .restaurant(restaurant)
@@ -79,13 +76,17 @@ public class RestaurantService {
                 return new CategoryResponse(saved.getId(), saved.getName(), saved.getImageUrl());
         }
 
-        public List<ProductResponse> getMenuByRestaurantId(Long id, Long categoryId, String search) {
-                Restaurant restaurant = restaurantRepository.findById(id)
-                                .orElseThrow(() -> new ResourceNotFoundException("Restaurant not found: " + id));
-                return productQueryRepository.findByFilters(restaurant, categoryId, search)
-                                .stream()
-                                .map(this::toProductResponse)
-                                .collect(Collectors.toList());
+        public SliceResponse<ProductResponse> getMenuByRestaurantId(Long id, Long categoryId, String search,
+                        Long cursor, int size) {
+                if (!restaurantRepository.existsById(id)) {
+                        throw new ResourceNotFoundException("Restaurant not found: " + id);
+                }
+                List<Product> result = productQueryRepository.findByFilters(id, categoryId, search, cursor, size + 1);
+                boolean hasNext = result.size() > size;
+                List<Product> page = hasNext ? result.subList(0, size) : result;
+                Long nextCursor = hasNext ? page.get(page.size() - 1).getId() : null;
+                return new SliceResponse<>(page.stream().map(this::toProductResponse).collect(Collectors.toList()),
+                                nextCursor);
         }
 
         private RestaurantResponse toRestaurantResponse(Restaurant r) {
@@ -101,8 +102,8 @@ public class RestaurantService {
                                 .map(img -> img.getUrl())
                                 .collect(Collectors.toList());
 
-                List<ProductVariantResponse> variants = productVariantRepository.findByProduct(p).stream()
-                                .filter(v -> Boolean.TRUE.equals(v.getIsActive()))
+                List<ProductVariantResponse> variants = productVariantRepository.findByProductAndIsActive(p, true)
+                                .stream()
                                 .map(v -> new ProductVariantResponse(
                                                 v.getId(), v.getSku(), v.getSize(),
                                                 v.getPrice(), v.getStock(), v.getImageUrl(), v.getIsActive()))
@@ -120,13 +121,20 @@ public class RestaurantService {
                                 .orElseThrow(() -> new ResourceNotFoundException(
                                                 "Restaurant not found for this operator"));
 
-                if (request.name() != null)          restaurant.setName(request.name());
-                if (request.description() != null)   restaurant.setDescription(request.description());
-                if (request.phone() != null)         restaurant.setPhone(request.phone());
-                if (request.addressDetail() != null) restaurant.setAddressDetail(request.addressDetail());
-                if (request.longitude() != null)     restaurant.setLongitude(request.longitude());
-                if (request.latitude() != null)      restaurant.setLatitude(request.latitude());
-                if (request.imageUrl() != null)      restaurant.setImageUrl(request.imageUrl());
+                if (request.name() != null)
+                        restaurant.setName(request.name());
+                if (request.description() != null)
+                        restaurant.setDescription(request.description());
+                if (request.phone() != null)
+                        restaurant.setPhone(request.phone());
+                if (request.addressDetail() != null)
+                        restaurant.setAddressDetail(request.addressDetail());
+                if (request.longitude() != null)
+                        restaurant.setLongitude(request.longitude());
+                if (request.latitude() != null)
+                        restaurant.setLatitude(request.latitude());
+                if (request.imageUrl() != null)
+                        restaurant.setImageUrl(request.imageUrl());
 
                 return toRestaurantResponse(restaurantRepository.save(restaurant));
         }
